--- a/index.html
+++ b/index.html
@@ -5,63 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
     <style>
-        /* Общие стили */
+        /* Основные стили */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
             color: #333;
+            background: #f9f9f9;
         }
         header {
             background: #0078D7;
             color: white;
-            padding: 20px 0;
             text-align: center;
+            padding: 20px;
         }
         header h1 {
             margin: 0;
+            font-size: 2.5em;
+        }
+        header p {
+            margin: 5px 0;
         }
         .container {
             width: 90%;
-            max-width: 1100px;
+            max-width: 800px;
             margin: 20px auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
         .section {
             margin-bottom: 20px;
         }
         .section h2 {
+            font-size: 1.5em;
+            color: #0078D7;
             border-bottom: 2px solid #0078D7;
             padding-bottom: 5px;
+            margin-bottom: 10px;
         }
-        .skills, .contact {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
+        ul {
+            padding-left: 20px;
         }
-        .skills div, .contact a {
+        ul li {
+            margin-bottom: 10px;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            background: #333;
+            color: white;
+        }
+        .skills div {
+            display: inline-block;
+            margin: 5px;
             padding: 10px;
             background: #f4f4f4;
             border-radius: 5px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        footer a {
+        .contacts a {
             color: #0078D7;
             text-decoration: none;
         }
-        footer a:hover {
+        .contacts a:hover {
             text-decoration: underline;
-        }
-        /* Адаптивность */
-        @media (max-width: 768px) {
-            .skills, .contact {
-                flex-direction: column;
-            }
         }
     </style>
 </head>
@@ -69,64 +80,58 @@
     <header>
         <h1>Danir Tserenov</h1>
         <p>QA Engineer | Warsaw, Poland</p>
-        <p><a href="mailto:dantser@gmail.com" style="color: white;">dantser@gmail.com</a> | +48 572 825 726</p>
+        <p>Email: <a href="mailto:dantser@gmail.com" style="color: white;">dantser@gmail.com</a></p>
+        <p>Phone: +48 572 825 726</p>
     </header>
+
     <div class="container">
-        <!-- Опыт работы -->
         <div class="section">
             <h2>Work Experience</h2>
-            <p><strong>Divine Integration</strong> (07/2024 - Present) - QA Engineer</p>
-            <p><strong>Skyeng</strong> (07/2021 - 06/2024) - IT Project Manager</p>
-            <p><strong>Yandex</strong> (08/2018 - 07/2021) - QA Engineer</p>
-            <p><strong>Verstaburo</strong> (11/2016 - 02/2018) - Junior Frontend Developer</p>
+            <ul>
+                <li><strong>Divine Integration</strong> (07/2024 - Present) - QA Engineer</li>
+                <li><strong>Skyeng</strong> (07/2021 - 06/2024) - IT Project Manager</li>
+                <li><strong>Yandex</strong> (08/2018 - 07/2021) - QA Engineer</li>
+                <li><strong>Verstaburo</strong> (11/2016 - 02/2018) - Junior Frontend Developer</li>
+            </ul>
         </div>
-        <!-- Образование -->
+
         <div class="section">
             <h2>Education</h2>
             <p>Specialist Degree in Economics</p>
             <p><strong>RSUH</strong>, Moscow, RU (09/2006 - 07/2012)</p>
             <p>Major: Finance and Credit</p>
         </div>
-        <!-- Навыки -->
+
         <div class="section">
             <h2>Skills</h2>
             <div class="skills">
-                <div>Test Case Development</div>
                 <div>Manual Testing</div>
                 <div>Functional Testing</div>
                 <div>Regression Testing</div>
                 <div>API Testing</div>
                 <div>Defect Tracking</div>
                 <div>SQL</div>
-                <div>MongoDB</div>
                 <div>Postman</div>
                 <div>Jira</div>
                 <div>Jenkins</div>
-                <div>Charles</div>
                 <div>Agile (Scrum, Kanban)</div>
-                <div>Stakeholder Communication</div>
-                <div>JavaScript</div>
-                <div>BPMN</div>
-                <div>Tilda</div>
-                <div>Bitrix24</div>
             </div>
         </div>
-        <!-- Контакты -->
-        <div class="section">
-            <h2>Contact</h2>
-            <div class="contact">
-                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">LinkedIn</a>
-                <a href="https://t.me/dantser2" target="_blank">Telegram</a>
-            </div>
-        </div>
-        <!-- Дополнительные данные -->
+
         <div class="section">
             <h2>Languages</h2>
             <p>Polish - B2, English - B1, Russian - Native</p>
         </div>
+
+        <div class="section contacts">
+            <h2>Contact</h2>
+            <p><a href="https://linkedin.com/in/danir-tserenov" target="_blank">LinkedIn</a></p>
+            <p><a href="https://t.me/dantser2" target="_blank">Telegram</a></p>
+        </div>
     </div>
+
     <footer>
-        <p>&copy; 2024 Danir Tserenov. Made with ❤ in Warsaw.</p>
+        <p>&copy; 2024 Danir Tserenov</p>
     </footer>
 </body>
 </html>
