--- a/index.html
+++ b/index.html
@@ -4,77 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
-    <style>
-        /* Основные стили */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            background: #f9f9f9;
-        }
-        header {
-            background: #0078D7;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        header p {
-            margin: 5px 0;
-        }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section h2 {
-            font-size: 1.5em;
-            color: #0078D7;
-            border-bottom: 2px solid #0078D7;
-            padding-bottom: 5px;
-            margin-bottom: 10px;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        ul li {
-            margin-bottom: 10px;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            padding: 10px;
-            background: #333;
-            color: white;
-        }
-        .skills div {
-            display: inline-block;
-            margin: 5px;
-            padding: 10px;
-            background: #f4f4f4;
-            border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-        .contacts a {
-            color: #0078D7;
-            text-decoration: none;
-        }
-        .contacts a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -133,5 +63,6 @@
     <footer>
         <p>&copy; 2024 Danir Tserenov</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
