--- a/index.html
+++ b/index.html
@@ -4,27 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Danir Tserenov</h1>
         <p>QA Engineer | Warsaw, Poland</p>
-        <p>Email: <a href="mailto:dantser@gmail.com" style="color: white;">dantser@gmail.com</a></p>
+        <p>Email: <a href="mailto:dantser@gmail.com">dantser@gmail.com</a></p>
         <p>Phone: +48 572 825 726</p>
     </header>
 
     <div class="container">
+        <!-- Work Experience -->
         <div class="section">
             <h2>Work Experience</h2>
+            
+            <h3>Divine Integration (07/2024 - Present) - QA Engineer</h3>
             <ul>
-                <li><strong>Divine Integration</strong> (07/2024 - Present) - QA Engineer</li>
-                <li><strong>Skyeng</strong> (07/2021 - 06/2024) - IT Project Manager</li>
-                <li><strong>Yandex</strong> (08/2018 - 07/2021) - QA Engineer</li>
-                <li><strong>Verstaburo</strong> (11/2016 - 02/2018) - Junior Frontend Developer</li>
+                <li>Participated in sprint planning and risk assessment, improving sprint efficiency by 25%.</li>
+                <li>Developed and executed test cases, ensuring comprehensive coverage.</li>
+                <li>Conducted functional, regression, and acceptance testing, reducing post-release defects by 20%.</li>
+                <li>Collaborated with development teams to identify and resolve bugs efficiently.</li>
+                <li>Executed extensive API and integration testing, reducing integration issues by 15%.</li>
+            </ul>
+
+            <h3>Skyeng (07/2021 - 06/2024) - IT Project Manager</h3>
+            <ul>
+                <li>Reduced manual testing time by 25% while maintaining full coverage of critical functionalities.</li>
+                <li>Optimized business processes, reducing manual workloads for operators by 50% and improving response times by 30%.</li>
+                <li>Gathered and documented detailed business and technical requirements, improving testing accuracy by 20%.</li>
+                <li>Reduced missed defects by 70% across 3 major product releases through effective documentation and collaboration.</li>
+                <li>Maintained both technical documentation and user-facing guides, simplifying complex functionalities.</li>
+            </ul>
+
+            <h3>Yandex (08/2018 - 07/2021) - QA Engineer</h3>
+            <ul>
+                <li>Managed bug tracking and coordinated with development teams to ensure swift issue resolution.</li>
+                <li>Automated key processes, improving customer response times by 25%.</li>
+                <li>Conducted A/B and acceptance testing, using customer feedback to drive product improvements.</li>
+                <li>Created and executed functional and regression test cases for web and mobile platforms.</li>
+                <li>Performed cross-platform testing on desktop (Win/Mac/Linux) and virtual systems, ensuring compatibility.</li>
+            </ul>
+
+            <h3>Verstaburo (11/2016 - 02/2018) - Junior Frontend Developer</h3>
+            <ul>
+                <li>Developed and maintained websites and landing pages with responsive, cross-browser designs.</li>
+                <li>Performed unit and functional testing of web applications and services.</li>
+                <li>Implemented fixes and improvements to client websites on the front-end.</li>
             </ul>
         </div>
 
+        <!-- Education -->
         <div class="section">
             <h2>Education</h2>
             <p>Specialist Degree in Economics</p>
@@ -32,37 +63,40 @@
             <p>Major: Finance and Credit</p>
         </div>
 
+        <!-- Skills -->
         <div class="section">
             <h2>Skills</h2>
-            <div class="skills">
-                <div>Manual Testing</div>
-                <div>Functional Testing</div>
-                <div>Regression Testing</div>
-                <div>API Testing</div>
-                <div>Defect Tracking</div>
-                <div>SQL</div>
-                <div>Postman</div>
-                <div>Jira</div>
-                <div>Jenkins</div>
-                <div>Agile (Scrum, Kanban)</div>
+            <div class="skills" id="skills">
+                <!-- Skills will be added dynamically -->
             </div>
         </div>
 
+        <!-- Languages -->
         <div class="section">
             <h2>Languages</h2>
             <p>Polish - B2, English - B1, Russian - Native</p>
         </div>
 
+        <!-- Contact -->
         <div class="section contacts">
             <h2>Contact</h2>
-            <p><a href="https://linkedin.com/in/danir-tserenov" target="_blank">LinkedIn</a></p>
-            <p><a href="https://t.me/dantser2" target="_blank">Telegram</a></p>
+            <p>
+                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+            </p>
+            <p>
+                <a href="https://t.me/dantser2" target="_blank">
+                    <i class="fab fa-telegram"></i> Telegram
+                </a>
+            </p>
         </div>
     </div>
 
     <footer>
         <p>&copy; 2024 Danir Tserenov</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
