--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Danir Tserenov</h1>
-        <p>QA Engineer | Warsaw, Poland</p>
-        <p>Email: <a href="mailto:dantser@gmail.com">dantser@gmail.com</a></p>
-        <p>Phone: +48 572 825 726</p>
-    </header>
+    <div class="resume">
+        <!-- Header -->
+        <header>
+            <h1>Danir Tserenov</h1>
+            <p>Warsaw, Poland • +48 572 825 726 • <a href="mailto:dantser@gmail.com">dantser@gmail.com</a> • 
+                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">LinkedIn</a> • 
+                <a href="https://t.me/dantser2" target="_blank">Telegram</a>
+            </p>
+            <h2>QA Engineer</h2>
+            <p>QA Engineer with over 5 years of experience in manual testing, improving product quality, and ensuring seamless user experiences. Expertise in conducting functional, regression, and acceptance testing across various platforms. Strong background in business process optimization, requirements gathering, and collaboration with cross-functional teams to ensure high-quality deliverables.</p>
+        </header>
 
-    <div class="container">
         <!-- Work Experience -->
-        <div class="section">
+        <section>
             <h2>Work Experience</h2>
             
             <h3>Divine Integration (07/2024 - Present) - QA Engineer</h3>
@@ -53,50 +57,37 @@
                 <li>Performed unit and functional testing of web applications and services.</li>
                 <li>Implemented fixes and improvements to client websites on the front-end.</li>
             </ul>
-        </div>
+        </section>
 
         <!-- Education -->
-        <div class="section">
+        <section>
             <h2>Education</h2>
-            <p>Specialist Degree in Economics</p>
+            <p>Specialist Degree in Economics, Major: Finance and Credit</p>
             <p><strong>RSUH</strong>, Moscow, RU (09/2006 - 07/2012)</p>
-            <p>Major: Finance and Credit</p>
-        </div>
+        </section>
 
         <!-- Skills -->
-        <div class="section">
+        <section>
             <h2>Skills</h2>
-            <div class="skills" id="skills">
-                <!-- Skills will be added dynamically -->
-            </div>
-        </div>
+            <ul class="skills">
+                <li>Manual Testing</li>
+                <li>Functional Testing</li>
+                <li>Regression Testing</li>
+                <li>API Testing</li>
+                <li>Defect Tracking</li>
+                <li>SQL</li>
+                <li>Postman</li>
+                <li>Jira</li>
+                <li>Jenkins</li>
+                <li>Agile (Scrum, Kanban)</li>
+            </ul>
+        </section>
 
         <!-- Languages -->
-        <div class="section">
+        <section>
             <h2>Languages</h2>
             <p>Polish - B2, English - B1, Russian - Native</p>
-        </div>
-
-        <!-- Contact -->
-        <div class="section contacts">
-            <h2>Contact</h2>
-            <p>
-                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a>
-            </p>
-            <p>
-                <a href="https://t.me/dantser2" target="_blank">
-                    <i class="fab fa-telegram"></i> Telegram
-                </a>
-            </p>
-        </div>
+        </section>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Danir Tserenov</p>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
