--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -12,18 +12,20 @@
         <!-- Header -->
         <header>
             <h1>Danir Tserenov</h1>
-            <p>Warsaw, Poland • +48 572 825 726 • <a href="mailto:dantser@gmail.com">dantser@gmail.com</a> • 
-                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">LinkedIn</a> • 
-                <a href="https://t.me/dantser2" target="_blank">Telegram</a>
-            </p>
-            <h2>QA Engineer</h2>
-            <p>QA Engineer with over 5 years of experience in manual testing, improving product quality, and ensuring seamless user experiences. Expertise in conducting functional, regression, and acceptance testing across various platforms. Strong background in business process optimization, requirements gathering, and collaboration with cross-functional teams to ensure high-quality deliverables.</p>
+            <p>Warsaw, Poland • +48 572 825 726 • <a href="mailto:dantser@gmail.com">dantser@gmail.com</a></p>
+            <div class="social-links">
+                <a href="https://linkedin.com/in/danir-tserenov" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://t.me/dantser2" target="_blank">
+                    <i class="fab fa-telegram"></i> Telegram
+                </a>
+            </div>
         </header>
 
         <!-- Work Experience -->
         <section>
             <h2>Work Experience</h2>
-            
             <h3>Divine Integration (07/2024 - Present) - QA Engineer</h3>
             <ul>
                 <li>Participated in sprint planning and risk assessment, improving sprint efficiency by 25%.</li>
