--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danir Tserenov - Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -21,6 +21,12 @@
                     <i class="fab fa-telegram"></i> Telegram
                 </a>
             </div>
+            <h2>QA Engineer</h2>
+            <p class="short-description">
+                QA Engineer with over 5 years of experience in manual testing, improving product quality,
+                and ensuring seamless user experiences. Expertise in functional, regression, and acceptance testing
+                across platforms. Strong background in business process optimization and requirements gathering.
+            </p>
         </header>
 
         <!-- Work Experience -->
