--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             </div>
             <h2>QA Engineer</h2>
             <p class="short-description">
-                QA Engineer with over 5 years of experience in manual testing, improving product quality,
-                and ensuring seamless user experiences. Expertise in functional, regression, and acceptance testing
-                across platforms. Strong background in business process optimization and requirements gathering.
+                QA Engineer with over 5 years of experience in manual testing, improving product quality, and ensuring seamless user experiences. Expertise in conducting functional, regression, and acceptance testing across various platforms. Strong background in business process optimization, requirements gathering, and collaboration with cross-functional teams to ensure high-quality deliverables.
             </p>
         </header>
 
